# corcept

./: .clippy.toml  .gitattributes  .gitignore  API.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EVAL-RUNBOOK.md  GOVERNANCE.md  INSTALL.md  LICENSE  LICENSE.old  Makefile  PLUGIN.md  PUBLISH-ORDER.md  README.md  RELEASE.md  RENAME.md  ROADMAP.md  SECURITY.md  SHIP-README.md  SKILLS.md  TASKS.md  TESTING.md  USAGE.md  axiom-code-fullship-v4-summary.json  checksums.sha256  corcept-fullship-v1-summary.json  corcept.mcpact.toml  deny.toml  gaps.md  metadata.json  release-manifest.json
.doctrine/: README.md  (+2 more)
benchmarks/adversarial-corpus/: Cargo.toml  README.md  composite.md  corpus.json  results.json  run.rs
benchmarks/adversarial-corpus/commands/: allowlist-evasion.json  container-sandbox-escape.json  direct-privilege-escalation.json  environment-based.json  interpreter-wrapper.json  path-resolution.json  shell-injection.json
crates/corcept-cli/: Cargo.toml  README.md
crates/corcept-cli/src/: artifact_load.rs  main.rs  mcp.rs
crates/corcept-cli/tests/: mcp.rs
crates/corcept-contract/: Cargo.toml
crates/corcept-contract/src/: lib.rs
crates/corcept-doctrine/: Cargo.toml  README.md
crates/corcept-doctrine/src/: lib.rs
crates/corcept-guards/: Cargo.toml  README.md
crates/corcept-guards/src/: lib.rs  verify_before_load.rs
crates/corcept-guards/tests/: adversarial_benchmark.rs  adversarial_corpus.rs
crates/corcept-ledger/: Cargo.toml  README.md
crates/corcept-ledger/examples/: recompute_attack.rs
crates/corcept-ledger/src/: canonical.rs  key.rs  keys.rs  lib.rs  signed_row.rs  trail.rs
crates/corcept-ledger/tests/: hash_chain_proptest.rs  recompute_attack.rs  signed_append.rs
crates/corcept-mcp/: Cargo.toml  README.md
crates/corcept-mcp/.mcpact/: source.mcpact.toml
crates/corcept-mcp/.mcpact/hosts/: axiom.json  claude.json  codex.toml
crates/corcept-mcp/.mcpact/tools/: corcept_audit_verify.json  corcept_doctor.json  corcept_export_cloudevents.json  corcept_hook_after_file_write.json  corcept_hook_after_run.json  corcept_hook_after_subprocess_exit.json  corcept_hook_before_file_write.json  corcept_hook_before_final_answer.json  corcept_hook_before_network_access.json  corcept_hook_before_run.json  corcept_hook_before_subprocess_spawn.json  corcept_hook_on_claim_emitted.json  corcept_hook_on_error.json  corcept_hook_posttool_audit.json  corcept_hook_pretool_guard.json  corcept_hook_session_start.json  corcept_hook_stop_check.json  corcept_hook_user_prompt_submit.json  corcept_key_generate.json  corcept_memory_promote.json
crates/corcept-mcp/src/: main.rs  tests.rs
crates/corcept-mcp/src/tools/: corcept_audit_verify.rs  corcept_doctor.rs  corcept_export_cloudevents.rs  corcept_hook_after_file_write.rs  corcept_hook_after_run.rs  corcept_hook_after_subprocess_exit.rs  corcept_hook_before_file_write.rs  corcept_hook_before_final_answer.rs  corcept_hook_before_network_access.rs  corcept_hook_before_run.rs  corcept_hook_before_subprocess_spawn.rs  corcept_hook_on_claim_emitted.rs  corcept_hook_on_error.rs  corcept_hook_posttool_audit.rs  corcept_hook_pretool_guard.rs  corcept_hook_session_start.rs  corcept_hook_stop_check.rs  corcept_hook_user_prompt_submit.rs  corcept_key_generate.rs  corcept_memory_promote.rs  mod.rs
crates/corcept-mcp/tests/: standalone_deps.rs  version_skew.rs
crates/corcept-memory/: Cargo.toml  README.md
crates/corcept-memory/src/: lib.rs
crates/corcept-runtime/: Cargo.toml  README.md
crates/corcept-runtime/src/: hooks_v2.rs  lib.rs  redact.rs
crates/corcept-runtime/src/hooks/: mod.rs
crates/corcept-runtime/src/hooks/before_run/: mod.rs  primer_injection.rs  primer_loader.rs
crates/corcept-runtime/tests/: cross_sink_contract.rs  doctor_signed.rs
crates/corcept-sink/: Cargo.toml
crates/corcept-sink-cloudevents/: Cargo.toml
crates/corcept-sink-cloudevents/src/: lib.rs
crates/corcept-sink-cloudevents/tests/: cross_sink_contract.rs
crates/corcept-sink/src/: lib.rs
crates/corcept-types/: Cargo.toml  README.md
crates/corcept-types/src/: event_type.rs  hook_fsm.rs  lib.rs  paths.rs  policy.rs
crates/corcept-types/tests/: event_type_proptest.rs  policy_proptest.rs
crates/create-corcept/: Cargo.toml  README.md
crates/create-corcept/src/: main.rs
evals/corcept-eval-suite-v2/: LICENSE  Makefile  README.md  metadata.json  pyproject.toml
evals/corcept-eval-suite-v2/adapters/: README.md  swe_bench_verified.md  terminal_bench.md
evals/corcept-eval-suite-v2/configs/: external_benchmarks.json
evals/corcept-eval-suite-v2/corcept_eval/: __main__.py  adapters.py  guard.py  local.py  mini_reasoning.py  mini_swe.py  pair.py  paired_all.py  receipts.py  report.py  runtime.py
evals/corcept-eval-suite-v2/docker/: docker-compose.yml
evals/corcept-eval-suite-v2/docs/: BENCHMARK-REGISTRY.md  BENCHMARK-STACK.md  EXTERNAL-BENCHMARKS.md
evals/corcept-eval-suite-v2/fixtures/: baseline-metrics.json
evals/corcept-eval-suite-v2/fixtures/golden/: case-receipt-pretool-allow.json  manifest-minimal.json
evals/corcept-eval-suite-v2/results/: README.md  benchmark-registry.json  external-runbook.md  preflight.json
evals/corcept-eval-suite-v2/results/external-smoke/: docker-smoke.txt  preflight.json
evals/corcept-eval-suite-v2/results/local/: governance.csv  report.md  results.json
evals/corcept-eval-suite-v2/results/local/mini_swe/: mini_swe_results.json
evals/corcept-eval-suite-v2/results/local/mini_swe/noop/mini_001_slugify_unicode/: PROMPT.md  slugify.py  test_slugify.py
evals/corcept-eval-suite-v2/results/local/mini_swe/noop/mini_002_rate_limiter_boundary/: PROMPT.md  rate_limiter.py  test_rate_limiter.py
evals/corcept-eval-suite-v2/results/local/mini_swe/noop/mini_003_redact_nested/: PROMPT.md  redact.py
evals/corcept-eval-suite-v2/results/local/mini_swe/oracle/mini_001_slugify_unicode/: slugify.py
evals/corcept-eval-suite-v2/scripts/: python.sh  run_external_smoke.sh  run_local.sh  run_pair_mini_swe.sh  run_preflight_and_runbook.sh  setup_env.sh  setup_external.sh
(+228 files in other folders)
