[workspace]
members = [
  "crates/corcept-types",
  "crates/corcept-ledger",
  "crates/corcept-guards",
  "crates/corcept-doctrine",
  "crates/corcept-memory",
  "crates/corcept-runtime",
  "crates/corcept-cli",
  "crates/corcept-contract",
  "crates/corcept-sink",
  "crates/corcept-sink-cloudevents",
  "crates/create-corcept",
  "crates/corcept-mcp"
]
resolver = "2"

[workspace.package]
version = "0.6.0-pre.2"
edition = "2021"
rust-version = "1.88"
authors = ["Ryan Tilcock <rytilcock@gmail.com>"]
license = "BUSL-1.1"
publish = true
repository = "https://github.com/0ryant/corcept"
homepage = "https://github.com/0ryant/corcept"
documentation = "https://github.com/0ryant/corcept/tree/main/docs"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.5"
# Shared AXIOM doctrine crates (git-pinned to one rev; NO crates.io publish —
# git-pin is the permanent dep model, products ship as license-gated binaries
# on R2). Phase-3 conformance: HASH/AUDIT/RECEIPT/EXIT.
axiom-hash = { git = "https://github.com/0ryant/axiom-doctrine-rs.git", rev = "3f09282" }
axiom-canonical = { git = "https://github.com/0ryant/axiom-doctrine-rs.git", rev = "3f09282" }
axiom-exit = { git = "https://github.com/0ryant/axiom-doctrine-rs.git", rev = "3f09282" }
axiom-audit = { git = "https://github.com/0ryant/axiom-doctrine-rs.git", rev = "3f09282" }
axiom-receipt = { git = "https://github.com/0ryant/axiom-doctrine-rs.git", rev = "3f09282" }
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
walkdir = "2.5"
tempfile = "3.10"
proptest = "1.6"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
base64 = "0.22"
rand = "0.8"
