[package]
name = "corcept-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
description = "Operator CLI and hook entrypoint for Corcept."
keywords = ["corcept", "claude-code", "hooks", "agent", "governance"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.corcept]
seo_title = "corcept-cli - Corcept Runtime crate"
seo_description = "Operator CLI and hook entrypoint for Corcept."
tags = ["corcept", "rust", "claude-code", "governance", "hooks"]
search_aliases = ["corcept-cli", "CORCEPT", "Claude Code runtime", "agent governance"]

[[bin]]
name = "corcept"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
corcept-runtime = { path = "../corcept-runtime", version = "0.6.0-pre" }
corcept-memory = { path = "../corcept-memory", version = "0.6.0-pre" }
corcept-doctrine = { path = "../corcept-doctrine", version = "0.6.0-pre" }
corcept-sink-cloudevents = { path = "../corcept-sink-cloudevents", version = "0.6.0-pre" }
corcept-ledger = { path = "../corcept-ledger", version = "0.6.0-pre" }

[dev-dependencies]
tempfile.workspace = true
