[package]
name = "corcept-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false  # Protective guard: never publish (BUSL-1.1 private distribution)
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
description = "Operator CLI and hook entrypoint for Corcept."
keywords = ["corcept", "claude-code", "hooks", "agent", "governance"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.corcept]
seo_title = "corcept-cli - Corcept Runtime crate"
seo_description = "Operator CLI and hook entrypoint for Corcept."
tags = ["corcept", "rust", "claude-code", "governance", "hooks"]
search_aliases = ["corcept-cli", "CORCEPT", "Claude Code runtime", "agent governance"]

[[bin]]
name = "corcept"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
serde_json.workspace = true
axiom-exit.workspace = true
axiom-audit.workspace = true
corcept-runtime = { path = "../corcept-runtime", version = "0.6.0-pre" }
corcept-memory = { path = "../corcept-memory", version = "0.6.0-pre" }
corcept-doctrine = { path = "../corcept-doctrine", version = "0.6.0-pre" }
corcept-sink-cloudevents = { path = "../corcept-sink-cloudevents", version = "0.6.0-pre" }
corcept-ledger = { path = "../corcept-ledger", version = "0.6.0-pre" }
corcept-guards = { path = "../corcept-guards", version = "0.6.0-pre" }
corcept-types = { path = "../corcept-types", version = "0.6.0-pre" }
hex = "0.4"
# Verify-before-load reuses mcpverify's in-process verifier (no subprocess
# spawn, fail-closed). git-pinned to the cohort pattern; mcpverify-core itself
# pins axiom-* at the SAME rev (bc8fc58) so there is no duplicate axiom-* build.
mcpverify-core = { git = "https://github.com/0ryant/mcpverify.git", rev = "1882409269c831b25e2375303e3c51112d36e689" }

[dev-dependencies]
tempfile.workspace = true
ed25519-dalek = "2"
