[package]
name = "corcept-contract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "JSON Schema contract validation for CORCEPT wire formats."
keywords = ["corcept", "claude-code", "hooks", "agent", "governance"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde_json.workspace = true
jsonschema = "0.26"
anyhow.workspace = true

[dev-dependencies]
corcept-types = { path = "../corcept-types", version = "0.5.0" }
corcept-sink-cloudevents = { path = "../corcept-sink-cloudevents", version = "0.5.0" }
