[package]
name = "corcept-mcp"
version = "0.6.0-pre"
edition = "2021"
license = "BUSL-1.1"
publish = false  # Private distribution per BUSL-1.1
description = "MCP adapter for corcept — Claude Code hook governance + append-only audit ledger surface"

[dependencies]
async-trait = "0.1"
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
sha2 = "0.10"
mcpact-core = { path = "../../../mcpact/crates/mcpact-core", version = "0.2.0-pre.1" }
mcpact-runtime = { path = "../../../mcpact/crates/mcpact-runtime", version = "0.2.0-pre.1" }
mcpact-audit = { path = "../../../mcpact/crates/mcpact-audit", version = "0.2.0-pre.1" }
mcpact-policy = { path = "../../../mcpact/crates/mcpact-policy", version = "0.2.0-pre.1" }
mcpact-mcp = { path = "../../../mcpact/crates/mcpact-mcp", version = "0.2.0-pre.1" }
mcpact-manifest = { path = "../../../mcpact/crates/mcpact-manifest", version = "0.2.0-pre.1" }
