[package]
name = "corcept-mcp"
version = "0.6.0-pre.1"
edition = "2021"
license = "BUSL-1.1"
publish = false  # Private distribution per BUSL-1.1
description = "MCP adapter for corcept — Claude Code hook governance + append-only audit ledger surface"

[dependencies]
async-trait = "0.1"
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
sha2 = "0.10"
mcpact-core = "0.2.0"
mcpact-runtime = "0.2.0"
mcpact-audit = "0.2.0"
mcpact-policy = "0.2.0"
mcpact-mcp = "0.2.0"
mcpact-manifest = "0.2.0"
