[package]
name = "corcept-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
description = "Evidence-backed memory candidate and promotion lifecycle for Corcept."
keywords = ["corcept", "claude-code", "hooks", "agent", "governance"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.corcept]
seo_title = "corcept-memory - Corcept Runtime crate"
seo_description = "Evidence-backed memory candidate and promotion lifecycle for Corcept."
tags = ["corcept", "rust", "claude-code", "governance", "hooks"]
search_aliases = ["corcept-memory", "CORCEPT", "Claude Code runtime", "agent governance"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_yaml.workspace = true
uuid.workspace = true
corcept-types = { path = "../corcept-types", version = "0.5.0" }

[dev-dependencies]
tempfile.workspace = true
