[package]
name = "corcept-sink-cloudevents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CloudEvents 1.0 projection for CORCEPT ledger audit events."
keywords = ["corcept", "claude-code", "hooks", "agent", "governance"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
corcept-types = { path = "../corcept-types", version = "0.5.0" }
corcept-ledger = { path = "../corcept-ledger", version = "0.5.0" }

[dev-dependencies]
tempfile.workspace = true
jsonschema = "0.26"
corcept-runtime = { path = "../corcept-runtime", version = "0.5.0" }
corcept-types = { path = "../corcept-types", version = "0.5.0" }
corcept-ledger = { path = "../corcept-ledger", version = "0.5.0" }
serde_json.workspace = true
