[package]
name = "corcept-sink-cloudevents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CloudEvents 1.0 projection for CORCEPT ledger audit events."
publish = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
corcept-types = { path = "../corcept-types", version = "0.6.0-pre" }
corcept-ledger = { path = "../corcept-ledger", version = "0.6.0-pre" }

[dev-dependencies]
tempfile.workspace = true
jsonschema = "0.26"
corcept-types = { path = "../corcept-types", version = "0.6.0-pre" }
corcept-ledger = { path = "../corcept-ledger", version = "0.6.0-pre" }
serde_json.workspace = true
