[package]
name = "corcept-sink"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-sink dispatch for CORCEPT audit and observability outputs."
publish = false

[dependencies]
anyhow.workspace = true
chrono.workspace = true
corcept-ledger = { path = "../corcept-ledger" }
corcept-types = { path = "../corcept-types" }
corcept-sink-cloudevents = { path = "../corcept-sink-cloudevents" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
