[package]
name = "corcept-sink"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-sink dispatch for CORCEPT audit and observability outputs."
publish = false  # Protective guard: never publish (BUSL-1.1 private distribution)

[dependencies]
anyhow.workspace = true
chrono.workspace = true
corcept-ledger = { path = "../corcept-ledger", version = "0.6.0-pre" }
corcept-types = { path = "../corcept-types", version = "0.6.0-pre" }
corcept-sink-cloudevents = { path = "../corcept-sink-cloudevents", version = "0.6.0-pre" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
